--- a/styles/sections/header.scss
+++ b/styles/sections/header.scss
@@ -1,4 +1,71 @@
 header {
   padding: 50px 0 36px 0;
-  @include flex(space-between);
+
+  .header-wrapper {
+    @include flex(space-between);
+
+    .header-menu {
+      @include flex;
+      gap: 48px;
+
+      & ul {
+        @include flex;
+        gap: 48px;
+        margin: 0;
+        padding: 0 0 12px;
+
+        & li {
+          list-style: none;
+          @include font-popins(18px, 500);
+          color: var(--color-text-light);
+        }
+
+        & :hover {
+          cursor: pointer;
+        }
+
+        & :first-child {
+          color: var(--color-text);
+        }
+      }
+    }
+
+    .header-sidebar {
+      @include flex;
+      gap: 48px;
+
+      .sidebar-divider {
+        border: 1px solid var(--color-text);
+        width: 24px;
+        height: 0px;
+        transform: rotate(90deg);
+      }
+
+      .hamburger {
+        width: 24px;
+        height: 24px;
+        display: flex;
+        gap: 3px;
+
+        transform: rotate(90deg);
+
+        & span {
+          border: 1px solid var(--color-text);
+          border-radius: 30px;
+        }
+
+        & :nth-child(2) {
+          height: 18px;
+        }
+
+        & :nth-child(3) {
+          height: 10px;
+        }
+
+        & :hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
